--- a/4_vue-skillup/es6/4_modules/exercise/package.json
+++ b/4_vue-skillup/es6/4_modules/exercise/package.json
@@ -17,6 +17,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
     "babel-loader": "^8.0.4",
-    "webpack": "^4.27.1"
+    "serialize-javascript": ">=2.1.1",
+    "webpack": "^4.41.5"
   }
 }
