--- a/4_vue-skillup/es6/package.json
+++ b/4_vue-skillup/es6/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "flush-promises": "^1.0.2",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
