--- a/6_advanced-vue/vue-router/package.json
+++ b/6_advanced-vue/vue-router/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopping",
+  "name": "vue-router1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vuex": "^3.1.2"
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
